--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 </head>
 
 <body>
+  
+  <header>
+      <div class="LogoandNav">
+          <h1 class="Logo">Fun Bus</h1>
+          <nav class="Nav">
+           <a class="nav-link" href="">Home</a>
+           <a class="nav-link" href="">About Us</a>
+           <a class="nav-link" href="">Blog</a>
+           <a class="nav-link" href="">Contact</a>
+          </nav>
+      </div>
+  </header>
 
   
      
