finished Nav and Header

--- a/index.html
+++ b/index.html
@@ -28,7 +28,14 @@
       </div>
   </header>
 
-  
+  <section class="MainHeader">
+    <div>
+      <img src="img/fun-bus.jpg" alt="pic of a bus">
+    </div>
+    <h2>Welcome To Fun Bus!</h2>
+    <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure Wordpress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+  </section>
+
      
   <div class="container home">
    
